[tool.poetry]
name = "rei-store"
version = "0.1.0"
description = "REI retail store analysis tool"
authors = ["Kevin Ramdath <krpent@gmail.com>"]
repository = "https://github.com/minormending/rei-store"
readme = "README.md"
license = "MIT"
keywords = ["rei", "age", "gender", "reviews"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[tool.poetry.scripts]
rei-store-cli = "rei_store.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
